2020-11-04  Joost Kremers <joostkremers@fastmail.fm>

	* diredc.el (diredc): Add autload cookie.